<?xml version="1.0"?>
<package>
  <name>cftld_ros</name>
  <version>1.0.0</version>
  <description>The ROS Wrapper for CFtld tracker</description>

  <maintainer email="mmonajje@sfu.ca">Mani Monajjemi</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/cftld_ros</url> -->

  <author email="mmonajje@sfu.ca">Mani Monajjemi</author>
  <author email="klaus.u.haag@gmail.com">Klaus Haag</author>
  <author email="georg.nebehay.fl@ait.ac.at">Georg Nebehay</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <!-- cftld -->
  <build_depend>git</build_depend>
  <build_depend>opencv3</build_depend>

  <!-- ros -->
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
